Fix section title align

--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,13 @@ div.main-title-container div.mdc-layout-grid__cell {
 
 section div.mdc-layout-grid__cell.title-cell {
   text-align: center;
-  grid-column-start: 3;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 480px) {
+  section div.mdc-layout-grid__cell.title-cell {
+    grid-column-start: 3;
+  }
 }
 
 @media screen and (min-width: 840px) {
